--- a/attendance-system/backend/package.json
+++ b/attendance-system/backend/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "qrcode": "^1.5.4"
   }
